# ru_cli

./: Cargo.toml  README.md  build.rs  model.safetensors
db/: ru_cli.db
my_cli/: commands.db  history.db  model.safetensors
src/: build.rs  db.rs  main.rs  modes.rs  plot.rs  ptest.py  rnn.rs  temp.py  terminal.rs  utilities.rs
