[package]
name = "ru_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "*", features = ["full"]}
clap = { version = "4.0", features = ["derive"] }  # CLI argument parsing
# blake3 = {version = "*"}
termion = "4.0.3"
# # kiss3d = "*"
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
rand = "0.8"

tch = {version="0.19.0", path="../tch-rs"}
anyhow = "1.0.33"

[dev-dependencies]
torch-sys = {version="0.19.0", path="../tch-rs/torch-sys"}

